try fix overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,7 +186,7 @@ section {
   margin-right: 6px;
 }
 
-.header .logo span {
+.header .logo h1 {
   font-size: 30px;
   font-weight: 700;
   letter-spacing: 1px;
